--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prettier": "prettier --write --ignore-path ./.gitignore .",
-    "lint:eslint": "eslint --ignore-path --format html --output-file ./dist/reports/lint/eslint-report.html --ignore-path ./.gitignore ."
+    "prettier": "prettier --write . --ignore-path ./.gitignore",
+    "lint:eslint": "eslint . --ignore-path --format html --output-file ./dist/reports/lint/eslint-report.html --ignore-path ./.gitignore",
+    "lint:stylelint": "stylelint \"**/*.{css,scss,sass}\" --format json > ./dist/reports/lint/stylelint-report.json --ignore-path ./.gitignore"
   },
   "eslintConfig": {
     "extends": [
