--- a/package.json
+++ b/package.json
@@ -58,6 +58,12 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-node" : "^11.1.0",
+    "eslint-plugin-react-perf" : "^3.3.0",
+    "eslint-plugin-typescript-sort-keys" : "^1.5.0",
+    "eslint-plugin-jest-react" : "^0.0.2",
+    "eslint-plugin-promise" : "^4.3.1",
+    "eslint-plugin-cypress" : "^2.11.2",
     "prettier": "^2.2.1"
   }
 }
