--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "eslint": "^7.22.0",
+    "html-lint" : "^2.4.2",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-jest": "^24.3.1",
     "eslint-plugin-prettier": "^3.3.1",
