--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "_Modules Optimisées de Conception Orientés React_",
   "main": "index.js",
   "private": true,
+  "bin": {
+    "mocor": "./bin/index.js"  
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
