--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "postbuild": "npm install -g .",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prettier": "prettier --write . --ignore-path ./.gitignore",
