--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,13 +1,16 @@
 {
     "plugins": ["stylelint-prettier"],
     "rules": {
-        "block-closing-brace-newline-after": "always-multi-line",
         "block-closing-brace-empty-line-before": "never",
-        "block-closing-brace-space-before": "always",
-        "block-opening-brace-space-after": "always",
+        "block-closing-brace-space-before": "always-single-line",
+        "block-opening-brace-space-after": "always-single-line",
         "block-opening-brace-space-before": "always",
         "block-closing-brace-newline-before": "always-multi-line",
         "block-opening-brace-newline-after": "always-multi-line",
-        "indentation": 4
+        "declaration-no-important": true,
+        "indentation": 2,
+        "keyframe-declaration-no-important": true,
+        "no-unsupported-browser-features":true,
+        "unit-case":"lower"
     }
 }
