--- a/package.json
+++ b/package.json
@@ -48,7 +48,10 @@
         "type": "git",
         "url": "git+https://github.com/MGuillaumeF/MOCOR.git"
     },
-    "author": "MGuillaumeF",
+    "author":  {
+        "name" :"MGuillaumeF",
+        "email": "michel.guillaume--foucaud@hotmail.fr"
+    },
     "license": "MIT",
     "bugs": {
         "url": "https://github.com/MGuillaumeF/MOCOR/issues"
@@ -71,6 +74,8 @@
         "eslint-plugin-typescript-sort-keys": "^1.5.0",
         "html-lint": "^2.4.2",
         "prettier": "^2.2.1",
-        "stylelint": "^13.12.0"
+        "stylelint": "^13.12.0",
+        "stylelint-config-standard": "^21.0.0",
+        "stylelint-prettier": "^1.2.0"
     }
 }
