--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "cy:open": "cypress open",
     "cy:run": "wait-on http://locahost:3000 && cypress run --config-file cypress.json",
     "prettier": "prettier --write . --ignore-path ./.gitignore",
-    "lint:eslint": "eslint . --format html --output-file ./dist/reports/lint/eslint-report.html --ignore-path ./.gitignore",
-    "lint:stylelint": "stylelint \"**/*.{css,scss,sass}\" --formatter json > ./dist/reports/lint/stylelint-report.json --ignore-path ./.gitignore",
+    "lint:eslint": "eslint . --fix --format html --output-file ./dist/reports/lint/eslint-report.html --ignore-path ./.gitignore",
+    "lint:stylelint": "stylelint \"**/*.{css,scss,sass}\" --fix --formatter json > ./dist/reports/lint/stylelint-report.json --ignore-path ./.gitignore",
     "lint:htmllint": "html-lint http://localhost:3000 --verbose > ./dist/reports/lint/htmllint-report.txt"
   },
   "browserslist": {
