--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   },
   "homepage": "https://github.com/MGuillaumeF/MOCOR#readme",
   "devDependencies": {
+    "@types/stylelint": "^9.10.1",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "cypress": "^6.8.0",
