--- a/src/cli/tsconfig.json
+++ b/src/cli/tsconfig.json
@@ -22,7 +22,8 @@
     "removeComments": true,
     "preserveConstEnums": true,
     "outDir": "../../dist/bin",
-    "sourceMap": true
+    "sourceMap": true,
+    "declaration": true
   },
   "include": [".", "model/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts"]
